<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/default_string"
            android:src="@drawable/logo"
            android:layout_marginEnd="30dp"/>

        <TextView
            android:id="@+id/textView19"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fito_story"
            android:textColor="#044E4D"
            android:textSize="30sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="185dp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="30sp"
                android:layout_marginBottom="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:layout_editor_absoluteX="140dp"
                tools:layout_editor_absoluteY="185dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/email"
                android:layout_marginBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="226dp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/username"
                android:layout_marginBottom="15dp"
                tools:layout_editor_absoluteX="111dp"
                tools:layout_editor_absoluteY="315dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:hint="@string/password"
                android:layout_marginBottom="15dp"
                tools:layout_editor_absoluteX="101dp"
                tools:layout_editor_absoluteY="420dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginBottom="15dp"
                android:onClick="goToMainActivity"
                android:backgroundTint="#044E4D"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/dynamic_text_color"
                    android:text="@string/already_have_account"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/login_signup"
                    android:textSize="18sp"
                    android:onClick="goToLogin"
                    android:text="@string/login"/>

            </LinearLayout>




        </LinearLayout>

    </androidx.cardview.widget.CardView>






</LinearLayout>