<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz2_bg"
    tools:context=".ScoreActivity">

    <LinearLayout
        android:id="@+id/firstLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="22dp"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/secLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/red_font"
            android:text="Library Name: "
            android:layout_marginEnd="20dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/creatureName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/creature_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/secLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstLabel">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/red_font"
        android:text="Story Name: "
        android:layout_marginEnd="20dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        />


        <TextView
            android:id="@+id/storyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/story_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            />
    </LinearLayout>



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#044E4D"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ToolbarPopupTheme"
        app:title="FITO Story" />

    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Home Button -->
        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:background="@null"
            android:contentDescription="@string/default_string"
            android:onClick="btnClick"
            android:src="@drawable/nav_home"
            app:tint="@android:color/white"/>

        <!-- Library Button -->
        <ImageButton
            android:id="@+id/navlibraryBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:background="@null"
            android:contentDescription="@string/default_string"
            android:onClick="btnClick"
            android:src="@drawable/nav_library"
            app:tint="@android:color/white"/>

        <!-- Quiz Button -->
        <ImageButton
            android:id="@+id/navQuizBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:background="@null"
            android:contentDescription="@string/default_string"
            android:onClick="btnClick"
            android:src="@drawable/nav_quiz"
            app:tint="@android:color/white"/>

        <ImageButton
            android:id="@+id/navSettingsBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:background="@null"
            android:contentDescription="@string/default_string"
            android:onClick="btnClick"
            android:src="@drawable/nav_settings"
            app:tint="@android:color/white"/>
    </LinearLayout>




    <TextView
        android:id="@+id/congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/congratulations"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondLinear" />


    <LinearLayout
        android:id="@+id/firstLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secLabel"
        android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginEnd="20dp"
        android:text="@string/your_score"/>

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="38sp"
            android:textColor="@color/white" />
    </LinearLayout>





    <LinearLayout
        android:id="@+id/secondLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/firstLinear"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginEnd="20dp"
            android:text="@string/percentage"/>

        <TextView
            android:id="@+id/textViewPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_over"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score" />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>