<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#044E4D"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ToolbarPopupTheme"
        app:title="FITO Story" />



    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Home Button -->
        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:background="@null"
            android:contentDescription="@string/default_string"
            android:onClick="btnClick"
            android:src="@drawable/nav_home"
            app:tint="?attr/colorControlNormal"/>

        <!-- Library Button -->
        <ImageButton
            android:id="@+id/navlibraryBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:background="@null"
            android:contentDescription="@string/default_string"
            android:onClick="btnClick"
            android:src="@drawable/nav_library"
            app:tint="?attr/colorControlNormal"/>

        <!-- Quiz Button -->
        <ImageButton
            android:id="@+id/navQuizBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:background="@null"
            android:contentDescription="@string/default_string"
            android:onClick="btnClick"
            android:src="@drawable/nav_quiz"
            app:tint="?attr/colorControlNormal"/>

        <ImageButton
            android:id="@+id/navSettingsBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:background="@null"
            android:contentDescription="@string/default_string"
            android:onClick="btnClick"
            android:src="@drawable/nav_settings"
            app:tint="?attr/colorControlNormal"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="113dp"
        android:text="@string/credits"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/credits_text"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>